changed the way i parsed the arguments in the linked list m now the syntax error will be showed in the second linked list

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,10 @@
         "m1.h": "c",
         "stdlib.h": "c",
         "readline.h": "c",
-        "stdio.h": "c"
+        "stdio.h": "c",
+        "chrono": "c",
+        "termios.h": "c",
+        "_types.h": "c",
+        "cdefs.h": "c"
     }
 }
