flag added to know if the node is a subshell

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "cdefs.h": "c",
         "ios": "c",
         "string": "c",
-        "iosfwd": "c"
+        "iosfwd": "c",
+        "T.C": "cpp"
     }
 }
